@@ -1,3 +1,9 @@
+2008-06-02  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-bookmarks.c (vinagre_bookmarks_init):
+	Use XDG recomendation to store bookmarks file. Make sure to copy
+	the old file to new location. Fixes #536111.
+
 2008-06-01  Jonh Wendell <jwendell@gnome.org>
 
 	Reworked 'edit bookmark' window, among other things...
